[gd_scene load_steps=4 format=2]

[ext_resource path="res://graphics/episode_selections/Labor.png" type="Texture" id=1]
[ext_resource path="res://src/LabRoomSelector.gd" type="Script" id=2]
[ext_resource path="res://graphics/lab/backArrow.png" type="Texture" id=3]

[node name="LabRoomSelector" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 1 )

[node name="RoomLabs" type="TextureButton" parent="Background"]
margin_left = -435.0
margin_top = -256.0
margin_right = 438.0
margin_bottom = -115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomComputerWorkshop" type="TextureButton" parent="Background"]
margin_left = -435.0
margin_top = -106.0
margin_right = 438.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomInternshipsAbroad" type="TextureButton" parent="Background"]
margin_left = -435.0
margin_top = 43.9999
margin_right = 438.0
margin_bottom = 185.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 160.0
margin_top = 600.0
margin_right = 260.0
margin_bottom = 680.0
rect_rotation = 180.0
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/RoomLabs" to="." method="_on_RoomLabs_pressed"]
[connection signal="pressed" from="Background/RoomComputerWorkshop" to="." method="_on_RoomComputerWorkshop_pressed"]
[connection signal="pressed" from="Background/RoomInternshipsAbroad" to="." method="_on_RoomInternshipsAbroad_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
